Created student and mentor controllers with registration and retrieving methods.

--- a/src/AspNetCoreDemoApp/AspNetCoreDemoApp.csproj
+++ b/src/AspNetCoreDemoApp/AspNetCoreDemoApp.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190220152133_FK_Institute.cs" />
+    <Compile Remove="Migrations\20190220152133_FK_Institute.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
